--- a/src/containers/pages/Dashboard/Dashboard.scss
+++ b/src/containers/pages/Dashboard/Dashboard.scss
@@ -33,6 +33,11 @@
             color: grey;
             outline: none;
         }
+        .action-wrapper{
+            display: flex;
+            justify-content: space-between;
+            width: 40%;
+        }
         .save-btn{
             padding: 12px 50px;
             border-radius: 4px;
@@ -43,6 +48,10 @@
             font-weight: bold;
             text-transform: uppercase;
             outline: none;
+            &.cancel {
+                border: 2px solid orange;
+                color: orange;
+            }
         }
     }
 
@@ -52,6 +61,13 @@
         padding: 16px;
         box-shadow: 4px 3px 9px rgba(0, 0, 0, 0.1) ;
         margin-bottom: 16px;
+        transition: all ease 0.35s;
+        position: relative;
+        &:hover {
+            cursor: pointer;
+            transform: translateY(-2px);
+            background: rgba(0, 0, 0, 0.1);
+        }
         p{
             margin: 0px;
         }
@@ -65,6 +81,23 @@
         .content{
             margin-top: 20px;
             font-size: 14px;
+        }
+        .delete-btn {
+            width: 30px;
+            height: 30px;
+            background: red;
+            border-radius: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: bold;
+            color: white;
+            position: absolute;
+            top: -15px;
+            right: -15px;
+            &.hover{
+                cursor: pointer;
+            }
         }
 
     }
